import "alice/nlu/granet/lib/grammar/proto/domain.proto";

package NGranet.NProto;

message TSerializedGrammar {
    optional TGranetDomain Domain           = 1;
    optional bytes Data                     = 2;
}

message TSerializedGrammars {
    repeated TSerializedGrammar Grammars    = 1;
}
